# UnikieProjects

./: .gitignore  CMakeLists.txt  README.md
InterviewsTasks/: CMakeLists.txt  StringUtilities.cpp  StringUtilities.h  main.cpp
